--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,10 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   clay_containers: ^0.3.2
-  cloud_firestore: ^2.5.3
   cupertino_icons: ^1.0.2
   device_preview: ^0.7.4
   dio: ^4.0.0
   emoji_picker_flutter: ^1.0.7
-  firebase_auth: ^3.1.1
-  firebase_core: ^1.6.0
-  firebase_messaging: ^10.0.7
-  firebase_storage: ^10.0.3
   flutter:
     sdk: flutter
   flutter_local_notifications: ^8.2.0
@@ -44,9 +39,7 @@ dependencies:
   flutter_svg: ^0.22.0
   fluttertoast: ^8.0.8
   get_it: ^7.2.0
-  google_sign_in: ^5.1.0
   http: ^0.13.3
-  image_picker: ^0.8.4+2
   intl: ^0.17.0
   logger: ^1.1.0
   lottie: ^1.1.0
@@ -74,7 +67,7 @@ flutter_icons:
 # flutter pub run flutter_launcher_icons:main
 flutter_native_splash:
   image: assets/images/app-icon.png
-  color: "FFFFFF"
+  color: "7D0068"
 
 # flutter pub pub run flutter_native_splash:create
 flutter:
@@ -82,7 +75,6 @@ flutter:
 
   assets:
     - assets/images/
-    - assets/stickers/
     - assets/icons/
     - assets/svg/
     - assets/json/
