--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.1.0
   clay_containers: ^0.3.2
   cupertino_icons: ^1.0.2
   device_preview: ^0.7.4
@@ -35,11 +36,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_local_notifications: ^8.2.0
+  flutter_markdown: ^0.6.6
   flutter_screenutil: ^5.0.0+2
   flutter_svg: ^0.22.0
   fluttertoast: ^8.0.8
   get_it: ^7.2.0
   http: ^0.13.3
+  infinite_scroll_pagination: ^3.1.0
   intl: ^0.17.0
   logger: ^1.1.0
   lottie: ^1.1.0
@@ -48,6 +51,8 @@ dependencies:
   shared_preferences: ^2.0.7
   stacked: ^2.2.5
   stacked_services: ^0.8.13
+  url_launcher: ^6.0.12
+  youtube_player_flutter: ^8.0.0
 
 dev_dependencies:
   change_app_package_name: ^1.0.0
