--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -71,7 +71,7 @@ flutter_icons:
 
 # flutter pub run flutter_launcher_icons:main
 flutter_native_splash:
-  image: assets/images/app-icon.png
+  image: assets/images/zena-splash-image.png
   color: "7D0068"
 
 # flutter pub pub run flutter_native_splash:create
