--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   photo_view: ^0.12.0
   share: ^2.0.4
   shared_preferences: ^2.0.7
+  simple_animations: ^4.0.1
   stacked: ^2.2.5
   stacked_services: ^0.8.13
   url_launcher: ^6.0.12
